ahva update done

--- a/about/ahvahub.html
+++ b/about/ahvahub.html
@@ -98,77 +98,72 @@
           </div>
           <div class="col-md-7 pb-5 mr-auto">
           	<h5>What...</h5>
-            <p>For a year and a half I worked as the designer for the Visual Art Department at UBC. In my last six months I led a user-centered design of a new student-oriented corner of their website.</p>
+            <p>For a year and a half I worked as the designer for the Visual Art Department at UBC. In my last eight months I was asked to help the studio safety manager migrate safety, and facility information to a new student-oriented section of the website.</p>
+
+            <p>In this role, I evangelized the benefits and possibilities of a user-centered approach, introduced this methodlogy to adminstrators and other stakeholders, and led a user-centered design process to create this new information hub.</p>
+
+            <div class="mb-4 text-center" data-aos="fade-up">            
+              <img src="images/ahvahub/audain.jpg" alt="Image" class="img-fluid" style="width: 60%">
+              <p>Homebase for this design project – I worked in the first floor, beneath the artist studios and print research center.</p>
+            </div>
+
+            <h5>Why...</h5>
+            <p>This project was motivated by the need to migrate paper safety documentation to the website, to better communicate the variety of informations and trainings that were required to safely and effectively use the diverse art department facilities (print shop, painting studios, dark room, sculpture studios, wood shop and more).</p>
+
+            <p>Initially this was confined to simply transfering information form paper to digital, however, through several meetings with stakeholders and the studio manager, I pushed for a more comprehensive information architecture and website redesign, and introduced a user-centered approach.</p>
+
+            <h5>How...</h5>
+            <p>From the start, the project was clearly oriented towards satisfying as yet unmet needs of students using the facilities. However there were two sides to consider, the students needed a clearer simpler way to access information, and the information had to be correct and be presented in accordance with safety rules and laws.</p>
+
+            <div class="mb-4 text-center" data-aos="fade-up">            
+              <img src="images/ahvahub/06.jpg" alt="Image" class="img-fluid">
+              <p>Personas divided by discipline to investigate different facilites and work flows.</p>
+            </div>
+
+            <p>From the top-level, I conducted interviews with several students to collect their experiences of using different facilities, and accessing the relevant information and trainings. I distilled this into a more actionable finding by creating user flows for several different "students" (painters, sculptors, photographers, and print makers) that covered the different information domains.</p>
+
+            <div class="mb-4 text-center" data-aos="fade-up">            
+              <img src="images/ahvahub/05.jpg" alt="Image" class="img-fluid" style="width: 80%">
+              <p>Dividing information by physical location was crucial<br>for students' ease of use while working.</p>
+            </div>
+
+            <p>At the same time, I worked from the bottom up with facility managers and other stakeholders on the information architecture. I discussed their needs as managers and those liable when safety procedures were not obeyed. Information obviously needed to be correct, however there were also concerns about structuring it intuitively, and crucially, making it easy to update as facilites change.</p>
+
+            <div class="mb-4 text-center" data-aos="fade-up">            
+              <img src="images/ahvahub/07.jpg" alt="Image" class="img-fluid" style="width: 80%">
+              <p>An example of sketching dependencies and information architecture in collaboration with different interviewees.</p>
+            </div>
+
+            <p>With these requirements in mind, I began to lay out a conceptual design of this new website that encompassed these diverse user requirements. These requirements led to early prototypes, starting with paper, and moving to simplified web mockups, which I could present and discussed with different user groups.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">            
               <img src="images/ahvahub/01.jpg" alt="Image" class="img-fluid" style="width: 80%">
               <p>Conceptually and practically restructuring the website,</br>while retaining the brand look-and-feel</p>
             </div>
 
-            <h5>Why...</h5>
-            <p>This project came about because I was asked to support a project manager in migrating training and safety information online. I took this opportunity to introduce a user-centered design approach and create an entirely new website. This also raised questions around how this information connected with the physical facilities.</p>
-
-            <div class="mb-4 text-center" data-aos="fade-up">            
-              <img src="images/ahvahub/05.jpg" alt="Image" class="img-fluid" style="width: 80%">
-              <p>A new, student-oriented website, inspired by user stories</br>and an information architecture redesign.</p>
-            </div>
-
-            <h5>How...</h5>
-            <p>The process began with listening to all the stakeholders, and finding their needs and expectations: from students, to instructors, to facility technicians, and finally administrators. With these in mind, I began to lay out a conceptual design of this new website that encompassed these diverse user requirements. These requirements led to early prototypes, starting with paper, and moving to simplified websites, which I could present and discussed with different user groups.</p>
-
             <p>This new website introduced new considerations about connecting digital safety information with specific physical locations. To link these two, I introduced QR codes and new design guides (and templates) for using QR code stickers to put information exactly where it was needed. They have since expanded their use of QR codes, not least for COVID-19 occupany restrictions.</p>
 
             <div class="mb-4 text-center" data-aos="fade-up">            
               <img src="images/ahvahub/03.jpg" alt="Image" class="img-fluid">
-              <p>Developing QR code templates to connect digital safety and training information with physical spaces.</p>
+              <p>QR codes for connecting digital safety information to physical spaces.</p>
             </div>
 
             <h5 id="more">More...</h5>
 
-            <p>I was also in charge of developing and maintaining content across web and social media in this designer role. I created original graphic and typography designs for special events and other promotions. I also acted as a photographer – documenting artworks in exhibitions, and shooting event photography for exhibition openings and other special events.</p>
-          </div>
-        </div>
-      </div>
-    </div>
+            <p>In this design role for the department, I was also in charge of developing and maintaining content across web and social media in this designer role. I created original graphic and typography designs for special events and other promotions. I also acted as a photographer – documenting artworks in exhibitions, and shooting event photography for exhibition openings and other special events.</p>
 
+            <div class="mb-4 text-center" data-aos="fade-up">
+              <img src="images/skills/1.jpg" alt="Image" class="img-fluid" style="width: 35%">
+              <img src="images/ahvahub/04.jpg" alt="Image" class="img-fluid" style="width: 28%">
+              <img src="images/skills/6.jpg" alt="Image" class="img-fluid" style="width: 35%">
+              <p>(I) Poster design for an art exhibition; (II) print ad for 'Canadian Art' magazine; (III) documentary photography of exhibitions</p>
+            </div>
 
-    <div class="site-section bg-light block-13">
-      <div class="container" data-aos="fade-up">
-        <div class="nonloop-block-13 owl-carousel">
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/skills/1.jpg" alt="Image" class="img-fluid">
-            </div>
-            <div class="">
-              <p>A poster design for an art exhibition at the AHVA gallery.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/skills/6.jpg" alt="Image" class="img-fluid">
-            </div>
-            <div class="">
-              <p>As a photographer, I documented exhibitions and curated photos for the website and social media.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/ahvahub/04.jpg" alt="Image" class="img-fluid">
-            </div>
-            <div class="">
-              <p>An ad I created for the 'Canadian Art' magazine, fall university edition.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/ahvahub/02.jpg" alt="Image" class="img-fluid">
-            </div>
-            <div class="">
+            <div class="mb-4 text-center" data-aos="fade-up">            
+              <img src="images/ahvahub/02.jpg" alt="Image" class="img-fluid" style="width: 50%">
               <p>Logo design for a rebranding of the AHVA Gallery.</p>
             </div>
+
           </div>
         </div>
       </div>
