--- a/about/blog3.html
+++ b/about/blog3.html
@@ -105,8 +105,8 @@
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
 							<div class="image" style="background-image: url('images/bw/01.jpg');"></div>
 							<div class="text">
-								<h3 class="font-weight-light"><a href="bw.html" target="blank">Black and White</a><span class="blog-year">2020</span></h3>
-								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Shadows and tranformations of basic shapes in Adobe Illustrator.</small></span>
+								<h3 class="font-weight-light"><a href="bw.html">Black and White</a><span class="blog-year">2020</span></h3>
+								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Shadows and transformations of basic shapes in Adobe Illustrator.</small></span>
 								</div>
 							</div>
 						</div>
