new avatar and shadows

--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900">
 	<link rel="stylesheet" href="fonts/icomoon/style.css">
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -77,9 +77,9 @@
 
 
 		<div class="container pt-5 hero">
-			<div class="row align-items-center text-center text-md-left">
-				<div class="col-lg-4">
-					<img src="images/avatar.jpg" alt="Image" class="img-fluid">    
+			<div class="row align-items-center text-md-left" style="border-radius: 20px; box-shadow: 0px 30px 50px #00000008;">
+				<div class="col-lg-4 text-center" style="padding-bottom: 20px">
+					<img src="images/Zack-Oval-768x768.png" alt="Image" class="img-fluid" width="80%">
 				</div>
 				<div class="col-lg-8">
 					<h3 style="font-family: 'Courier', Courier, sans-serif; padding-bottom: 20px">Designer, researcher, artist</h3>
@@ -122,7 +122,7 @@
 						<div class="text-white mb-3"><span class="text-black-opacity-05"><small>Exploring the design space of embodied creativity support tools at the INRIA human-computer interaction research lab in Paris.</small></span></div>
 					</div>
 				</div>
-				
+
 				<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
 					<div class="image" style="background-image: url('images/meethalfway/03.jpg');"></div>
 					<div class="text">
