--- a/about/blog.html
+++ b/about/blog.html
@@ -112,8 +112,8 @@
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
 							<div class="image" style="background-image: url('images/blog_header.jpg');"></div>
 							<div class="text">
-								<h3 class="font-weight-light"><a href="https://www.instagram.com/machine_scaped/" target="blank">Neural Net Photography</a><span class="blog-year">2020</span></h3>
-								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>An experimentation in using style-matching neural networks to generate digital photography artworks.</small></span></div>
+								<h3 class="font-weight-light"><a href="https://www.instagram.com/machine_scaped/" target="blank">Machine Landscapping</a><span class="blog-year">2020</span></h3>
+								<div class="text-white mb-3"><span class="text-black-opacity-05"><small>An experimentation in using style-matching neural networks to generate digital landscape photography.</small></span></div>
 							</div>
 						</div>
 
