--- a/about/bw.html
+++ b/about/bw.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900"> 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -62,7 +62,7 @@
           </div>
         </div>
       </div>
-      
+
     </header>
 
     <div class="site-blocks-cover overlay inner-page-cover" style="background-image: url(images/bw/09.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
@@ -91,7 +91,7 @@
           <div class="col-md-7 pb-5 mr-auto">
             <p>This is a project to explore shape manipulation in Adobe Illustrator - to explore the application features in more depth and find unexpected results of combining tools and effects in unexpected ways.</p>
 
-            <div class="mb-4 text-center" data-aos="fade-up">            
+            <div class="mb-4 text-center" data-aos="fade-up">
               <img src="images/bw/01.jpg" alt="Image" class="img-fluid" width="80%">
               <p></p>
             </div>
@@ -140,14 +140,9 @@
 
         <div class="row pt-5 mt-5 text-center">
           <div class="col-md-12">
-            <p>Get in Touch.</p>
-            <p>+31 6 16 82 91 49‬ • <a href="mailto:zacharylwilson@me.com">zacharylwilson@me.com</a> • <a href="https://www.linkedin.com/in/zack-wilson/">LinkedIn</a> • <a href="https://github.com/zlwilson">GitHub</a></p>
-            
             <p>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | Powered by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
+    					&copy; </script><script>document.write(new Date().getFullYear());</script>
+    				</p>
           </div>
 
         </div>
