--- a/about/ck12.html
+++ b/about/ck12.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900"> 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -67,7 +67,7 @@
 
         </div>
       </div>
-      
+
     </header>
 
     <div class="site-blocks-cover overlay inner-page-cover" style="background-image: url(images/ck12/02.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
@@ -111,7 +111,7 @@
 
             <p>Later they introduced a tool for science teachers to build their own interactive science questions ("PLIXes"), and a library of pre-built questions. I helped to polish this tool, tracking bugs, and liaising between developers and science teachers. Through this process I helped to populate the library with pre-built questions, refine the tool, and investigate what functions were critical, were missing, or weren't needed for the first release.</p>
 
-            <div class="mb-4 text-center" data-aos="fade-up">            
+            <div class="mb-4 text-center" data-aos="fade-up">
               <img src="images/ck12/04.jpg" alt="Image" class="img-fluid" style="width: 80%">
               <p>An early version of the "PLIX" tool I helped to conduct usability testing on.</p>
             </div>
@@ -125,7 +125,7 @@
       <div class="container" data-aos="fade-up">
         <div class="nonloop-block-13 owl-carousel">
           <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
+            <div class="mb-4">
               <img src="images/ck12/05.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="">
@@ -134,7 +134,7 @@
           </div>
 
           <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
+            <div class="mb-4">
               <img src="images/ck12/03.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="">
@@ -143,7 +143,7 @@
           </div>
 
           <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
+            <div class="mb-4">
               <img src="images/ck12/06.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="">
@@ -172,13 +172,9 @@
 
         <div class="row pt-5 mt-5 text-center">
           <div class="col-md-12">
-            <p>+31 6 16 82 91 49‬ • <a href="mailto:zacharylwilson@me.com">zacharylwilson@me.com</a> • <a href="https://www.linkedin.com/in/zack-wilson/">LinkedIn</a> • <a href="https://github.com/zlwilson">GitHub</a></p>
-            
             <p>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | Powered by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
+    					&copy; </script><script>document.write(new Date().getFullYear());</script>
+    				</p>
           </div>
 
         </div>
