--- a/about/index.html
+++ b/about/index.html
@@ -76,10 +76,10 @@
 
 
 
-		<div class="container pt-5 hero">
-			<div class="row align-items-center text-md-left" style="border-radius: 20px; box-shadow: 0px 30px 50px #00000008;">
+		<div class="container hero">
+			<div class="row align-items-center text-md-left pb-5 pt-5" style="border-radius: 20px; box-shadow: 0px 30px 50px #00000008;">
 				<div class="col-lg-4 text-center" style="padding-bottom: 20px">
-					<img src="images/Zack-Oval-768x768.png" alt="Image" class="img-fluid" width="80%">
+					<img src="images/Zack-Oval-768x768.png" alt="Image" class="img-fluid" width="60%">
 				</div>
 				<div class="col-lg-8">
 					<h3 style="font-family: 'Courier', Courier, sans-serif; padding-bottom: 20px">Designer, researcher, artist</h3>
@@ -95,12 +95,12 @@
 
 				<div class="row">
 					<div class="col-lg-3">
-						<div class="featured-user  mb-5 mb-lg-0">
+						<div class="featured-user mb-5 mb-lg-0">
 							<h3 class="mb-4">Portfolio</h3>
 							<ul class="list-unstyled">
 								<li>
 									<div class="podcaster" style="line-height: 1.5">
-										<span class="d-block">Here are some of the projects</br>I've been working on lately.</span>
+										<span class="d-block">Here are some of my past projects.</span>
 									</br>
 									<span class="d-block">For my complete CV and experiences please visit my <a href="https://www.linkedin.com/in/zack-wilson/" style="border-bottom: 2px dotted; padding-bottom: 0;">LinkedIn</a>.</span>
 								</br>
@@ -112,8 +112,6 @@
 			</div>
 
 			<div class="col-lg-9">
-
-
 				<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
 					<div class="image" style="background-image: url('images/technofidgets/01.jpg');"></div>
 					<div class="text">
@@ -333,9 +331,7 @@
 		<div class="row pt-5 mt-5 text-center">
 			<div class="col-md-12">
 				<p>
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | Powered by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+					&copy; </script><script>document.write(new Date().getFullYear());</script>
 				</p>
 			</div>
 
