--- a/about/meethalfway.html
+++ b/about/meethalfway.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900">
 	<link rel="stylesheet" href="fonts/icomoon/style.css">
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -100,7 +100,7 @@
 						<h5>What...</h5>
 						<p>With a team of four designers, we developed a prototype mobile-based map application to facilitate collaborative geo-navigation and geo-located meetups. The concept was developed over the course of a week-long intensive design bootcamp at the Université Paris-Saclay.</p>
 
-						<div class="mb-4 text-center" data-aos="fade-up">            
+						<div class="mb-4 text-center" data-aos="fade-up">
 							<img src="images/meethalfway/01.jpg" alt="Image" class="img-fluid" style="width: 80%">
 							<p>Our team of four UX designers, experimenting with gesture-based interactions.</p>
 						</div>
@@ -118,7 +118,7 @@
 						<ul>
 							<li><b>Interviews</b> – open ended interviews aimed at eliciting stories about navigation app use, focused on times when an app didn't work as expected.</li>
 							<li><b>Observation & Introspection</b> – as designers we teamed up to observe one another, think-aloud and critically examine interactions while using several different map applications.</li>
-							<div class="mb-4 text-center" data-aos="fade-up">            
+							<div class="mb-4 text-center" data-aos="fade-up">
 								<img src="images/meethalfway/11.jpg" alt="Image" class="img-fluid" style="width: 80%">
 								<p>Oberservational notes.</p>
 							</div>
@@ -126,14 +126,14 @@
 							<li><b>Interaction Point Analysis</b> - distilling the stories and observations into clear interaction points.</li>
 
 							<li><b>Breakdown Analysis</b> – Isolating interaction points from the story interviews and our introspections where interesting breakdowns occured.</li>
-							<div class="mb-4 text-center" data-aos="fade-up">            
+							<div class="mb-4 text-center" data-aos="fade-up">
 								<img src="images/meethalfway/08.jpg" alt="Image" class="img-fluid" style="width: 32%">
 								<img src="images/meethalfway/09.jpg" alt="Image" class="img-fluid" style="width: 32%">
 								<img src="images/meethalfway/10.jpg" alt="Image" class="img-fluid" style="width: 32%">
 								<p>Illustrating specific interaction points where breakdowns occur.</p>
 							</div>
 
-							
+
 							<li><b>User Profile</b> - based on details taken from a variety of interviewees: 18-30 years old; likes to meet up with friends, social; international oriented; cosmopolitan; eager to explore (hipsters)</li>
 
 							<li><b>Personas & Extreme Character</b> - We created three personas (Rick, Simon, and Extreme Emilia) based on the User Profile, to push our design into specific, real situations.</li>
@@ -145,7 +145,7 @@
 
 						<ul>
 							<li><b>Brainstorming</b> (Classical)</li>
-							<div class="mb-4 text-center" data-aos="fade-up">            
+							<div class="mb-4 text-center" data-aos="fade-up">
 								<img src="images/meethalfway/02.jpg" alt="Image" class="img-fluid" style="width: 80%">
 								<p>A snapshot of ideas about collaborative geo-navigation.</p>
 							</div>
@@ -166,7 +166,7 @@
 								</ol>
 							</li>
 							<li><b>Design Space</b></li>
-							<div class="mb-4 text-center" data-aos="fade-up">            
+							<div class="mb-4 text-center" data-aos="fade-up">
 								<img src="images/meethalfway/04.jpg" alt="Image" class="img-fluid" style="width: 80%">
 								<p>Classifying ideas and interactions according to design dimension.</p>
 							</div>
@@ -195,7 +195,7 @@
 							</li>
 							<li><b>Design Scenario</b> - Using the three personas, we created an updated Use Scenario involving our design concept.</li>
 							<li><b>Interaction Table</b> - deconstructing and examining the specific interaction points from the Design Scenario.</li>
-							<div class="mb-4 text-center" data-aos="fade-up">            
+							<div class="mb-4 text-center" data-aos="fade-up">
 								<img src="images/meethalfway/06.jpg" alt="Image" class="img-fluid" style="width: 80%">
 								<p>Specific objects and interactions of interest from the Design Scenario.</p>
 							</div>
@@ -291,12 +291,8 @@
 
 					<div class="row pt-5 mt-5 text-center">
 						<div class="col-md-12">
-							<p>+31 6 16 82 91 49‬ • <a href="mailto:zacharylwilson@me.com">zacharylwilson@me.com</a> • <a href="https://www.linkedin.com/in/zack-wilson/">LinkedIn</a> • <a href="https://github.com/zlwilson">GitHub</a></p>
-
 							<p>
-								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-								Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | Powered by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								&copy; </script><script>document.write(new Date().getFullYear());</script>
 							</p>
 						</div>
 
