--- a/about/ahvahub.html
+++ b/about/ahvahub.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900"> 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -70,7 +70,7 @@
 
         </div>
       </div>
-      
+
     </header>
 
     <div class="site-blocks-cover overlay inner-page-cover" style="background-image: url(images/ahvahub/audain.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
@@ -102,7 +102,7 @@
 
             <p>In this role, I evangelized the benefits and possibilities of a user-centered approach, introduced this methodlogy to adminstrators and other stakeholders, and led a user-centered design process to create this new information hub.</p>
 
-            <div class="mb-4 text-center" data-aos="fade-up">            
+            <div class="mb-4 text-center" data-aos="fade-up">
               <img src="images/ahvahub/audain.jpg" alt="Image" class="img-fluid" style="width: 60%">
               <p>Homebase for this design project – I worked in the first floor, beneath the artist studios and print research center.</p>
             </div>
@@ -115,35 +115,35 @@
             <h5>How...</h5>
             <p>From the start, the project was clearly oriented towards satisfying as yet unmet needs of students using the facilities. However there were two sides to consider, the students needed a clearer simpler way to access information, and the information had to be correct and be presented in accordance with safety rules and laws.</p>
 
-            <div class="mb-4 text-center" data-aos="fade-up">            
+            <div class="mb-4 text-center" data-aos="fade-up">
               <img src="images/ahvahub/06.jpg" alt="Image" class="img-fluid">
               <p>Personas divided by discipline to investigate different facilites and work flows.</p>
             </div>
 
             <p>From the top-level, I conducted interviews with several students to collect their experiences of using different facilities, and accessing the relevant information and trainings. I distilled this into a more actionable finding by creating user flows for several different "students" (painters, sculptors, photographers, and print makers) that covered the different information domains.</p>
 
-            <div class="mb-4 text-center" data-aos="fade-up">            
+            <div class="mb-4 text-center" data-aos="fade-up">
               <img src="images/ahvahub/05.jpg" alt="Image" class="img-fluid" style="width: 80%">
               <p>Dividing information by physical location was crucial<br>for students' ease of use while working.</p>
             </div>
 
             <p>At the same time, I worked from the bottom up with facility managers and other stakeholders on the information architecture. I discussed their needs as managers and those liable when safety procedures were not obeyed. Information obviously needed to be correct, however there were also concerns about structuring it intuitively, and crucially, making it easy to update as facilites change.</p>
 
-            <div class="mb-4 text-center" data-aos="fade-up">            
+            <div class="mb-4 text-center" data-aos="fade-up">
               <img src="images/ahvahub/07.jpg" alt="Image" class="img-fluid" style="width: 80%">
               <p>An example of sketching dependencies and information architecture in collaboration with different interviewees.</p>
             </div>
 
             <p>With these requirements in mind, I began to lay out a conceptual design of this new website that encompassed these diverse user requirements. These requirements led to early prototypes, starting with paper, and moving to simplified web mockups, which I could present and discussed with different user groups.</p>
 
-            <div class="mb-4 text-center" data-aos="fade-up">            
+            <div class="mb-4 text-center" data-aos="fade-up">
               <img src="images/ahvahub/01.jpg" alt="Image" class="img-fluid" style="width: 80%">
               <p>Conceptually and practically restructuring the website,</br>while retaining the brand look-and-feel</p>
             </div>
 
             <p>This new website introduced new considerations about connecting digital safety information with specific physical locations. To link these two, I introduced QR codes and new design guides (and templates) for using QR code stickers to put information exactly where it was needed. They have since expanded their use of QR codes, not least for COVID-19 occupany restrictions.</p>
 
-            <div class="mb-4 text-center" data-aos="fade-up">            
+            <div class="mb-4 text-center" data-aos="fade-up">
               <img src="images/ahvahub/03.jpg" alt="Image" class="img-fluid">
               <p>QR codes for connecting digital safety information to physical spaces.</p>
             </div>
@@ -159,7 +159,7 @@
               <p>(I) Poster design for an art exhibition; (II) print ad for 'Canadian Art' magazine; (III) documentary photography of exhibitions</p>
             </div>
 
-            <div class="mb-4 text-center" data-aos="fade-up">            
+            <div class="mb-4 text-center" data-aos="fade-up">
               <img src="images/ahvahub/02.jpg" alt="Image" class="img-fluid" style="width: 50%">
               <p>Logo design for a rebranding of the AHVA Gallery.</p>
             </div>
@@ -186,14 +186,9 @@
 
         <div class="row pt-5 mt-5 text-center">
           <div class="col-md-12">
-            <p>Get in Touch.</p>
-            <p>+31 6 16 82 91 49‬ • <a href="mailto:zacharylwilson@me.com">zacharylwilson@me.com</a> • <a href="https://www.linkedin.com/in/zack-wilson/">LinkedIn</a> • <a href="https://github.com/zlwilson">GitHub</a></p>
-            
             <p>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | Powered by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
+    					&copy; </script><script>document.write(new Date().getFullYear());</script>
+    				</p>
           </div>
 
         </div>
