--- a/about/blog.html
+++ b/about/blog.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900">
 	<link rel="stylesheet" href="fonts/icomoon/style.css">
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/mediaelementplayer.min.css">
-	
+
 	<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="css/style.css">
 
@@ -143,9 +143,9 @@
 								</div>
 								<div class="text-white mb-3"></div>
 							</div>
-						</div>						
+						</div>
 					</div>
-					
+
 					<div class="container" data-aos="fade-up">
 						<div class="row">
 							<div class="col-md-12 text-center">
@@ -185,9 +185,7 @@
 				<div class="row pt-5 mt-5 text-center">
 					<div class="col-md-12">
 						<p>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | Powered by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+							&copy; </script><script>document.write(new Date().getFullYear());</script>
 						</p>
 					</div>
 
