--- a/about/blog3.html
+++ b/about/blog3.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900">
 	<link rel="stylesheet" href="fonts/icomoon/style.css">
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -119,7 +119,7 @@
 								</div>
 							</div>
 						</div>
-						
+
 						<div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
 							<div class="image" style="background-image: url('images/conspiracy.jpg');"></div>
 							<div class="text">
@@ -168,9 +168,7 @@
 				<div class="row pt-5 mt-5 text-center">
 					<div class="col-md-12">
 						<p>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | Powered by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+							&copy; </script><script>document.write(new Date().getFullYear());</script>
 						</p>
 					</div>
 
