--- a/about/meditation.html
+++ b/about/meditation.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900"> 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -69,7 +69,7 @@
 
         </div>
       </div>
-      
+
     </header>
 
     <div class="site-blocks-cover overlay inner-page-cover" style="background-image: url(images/meditation/03.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
@@ -98,7 +98,7 @@
           <div class="col-md-7 pb-5 mr-auto">
             <p>With a team of two other designers, Daniele and Beatrice, we set out to design a 'serious game' to support and guide meditation.</p>
 
-            <div class="mb-4 text-center" data-aos="fade-up">            
+            <div class="mb-4 text-center" data-aos="fade-up">
               <img src="images/meditation/04.jpg" alt="Image" class="img-fluid">
               <p>Daniele, in the middle of a thermal meditation game.</p>
             </div>
@@ -144,7 +144,7 @@
       <div class="container" data-aos="fade-up">
         <div class="nonloop-block-13 owl-carousel">
           <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
+            <div class="mb-4">
               <img src="images/meditation/15.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="">
@@ -153,7 +153,7 @@
           </div>
 
           <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
+            <div class="mb-4">
               <img src="images/meditation/06.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="">
@@ -162,7 +162,7 @@
           </div>
 
           <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
+            <div class="mb-4">
               <img src="images/meditation/02.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="">
@@ -171,7 +171,7 @@
           </div>
 
           <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
+            <div class="mb-4">
               <img src="images/meditation/12.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="">
@@ -180,7 +180,7 @@
           </div>
 
           <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
+            <div class="mb-4">
               <img src="images/meditation/13.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="">
@@ -189,7 +189,7 @@
           </div>
 
           <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
+            <div class="mb-4">
               <img src="images/meditation/14.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="">
@@ -199,7 +199,7 @@
 
 
           <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
+            <div class="mb-4">
               <img src="images/meditation/01.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="">
@@ -208,7 +208,7 @@
           </div>
 
           <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
+            <div class="mb-4">
               <img src="images/meditation/07.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="">
@@ -236,14 +236,9 @@
 
         <div class="row pt-5 mt-5 text-center">
           <div class="col-md-12">
-            <p>Get in Touch.</p>
-            <p>+31 6 16 82 91 49‬ • <a href="mailto:zacharylwilson@me.com">zacharylwilson@me.com</a> • <a href="https://www.linkedin.com/in/zack-wilson/">LinkedIn</a> • <a href="https://github.com/zlwilson">GitHub</a></p>
-            
             <p>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | Powered by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
+    					&copy; </script><script>document.write(new Date().getFullYear());</script>
+    				</p>
           </div>
 
         </div>
