--- a/about/technofidgets.html
+++ b/about/technofidgets.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900">
 	<link rel="stylesheet" href="fonts/icomoon/style.css">
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -101,7 +101,7 @@
 						<h5>What...</h5>
 						<p>At <a href="https://www.inria.fr/en" target="blank">INRIA Paris</a>, I led a research-through-design project into technologies that support embodied creativity. This project was part of the larger goals of this lab in examining the limits of technology as it is used for unexpected, creative goals, and concluded with the fabrication of three technology probes, which were tested with creatives in Paris.</p>
 
-						<div class="mb-4 text-center" data-aos="fade-up">            
+						<div class="mb-4 text-center" data-aos="fade-up">
 							<img src="https://project.inria.fr/siliconvalley/files/2013/03/CRI_ROC.jpg" alt="Image" class="img-fluid" style="width: 60%">
 							<p>INRIA Paris research center.</p>
 						</div>
@@ -111,7 +111,7 @@
 
 						<p>My project explored the fundamentals of the creative process, the value of movement for focus and creativity, and how serendipity can become a design goal. It was grounded in an intersection of the latest creativity research from neuroscience and psychology, with the existing HCI work on creativity and embodied tools. I used design to explore the gap between the new embodied nature of creativity in the former, and the focused, goal-oriented creativity of the latter.</p>
 
-						<div class="mb-4 text-center" data-aos="fade-up">            
+						<div class="mb-4 text-center" data-aos="fade-up">
 							<img src="images/technofidgets/presentation/04.jpg" alt="Image" class="img-fluid" style="width: 48%">
 							<img src="images/technofidgets/presentation/03.jpg" alt="Image" class="img-fluid" style="width: 48%">
 							<p>Presenting background theory on creativity and bimanual interaction.</p>
@@ -120,7 +120,7 @@
 						<h5>How...</h5>
 						<p>I worked with creative professionals to fundamentally understand their creative processes, and explored, through design, how technologies could be created to better support their work.</p>
 
-						<div class="mb-4 text-center" data-aos="fade-up">            
+						<div class="mb-4 text-center" data-aos="fade-up">
 							<img src="images/technofidgets/14.jpg" alt="Image" class="img-fluid" style="width: 58%">
 							<img src="images/technofidgets/15.jpg" alt="Image" class="img-fluid" style="width: 39%">
 							<p>Two examples of music producer's home studios from interviews. (COVID-19 created some interesting challenges and opportunities for doing this ethnographic research)</p>
@@ -130,7 +130,7 @@
 
 						<p>I synthesized these stories into three key findings (or themes) of professionals' creative process: the signature toolbox, the mindfuck mindset, and manufactured obstacles.</p>
 
-						<div class="mb-4 text-center" data-aos="fade-up">            
+						<div class="mb-4 text-center" data-aos="fade-up">
 							<img src="images/technofidgets/presentation/07.jpg" alt="Image" class="img-fluid" style="width: 32%">
 							<img src="images/technofidgets/presentation/08.jpg" alt="Image" class="img-fluid" style="width: 32%">
 							<img src="images/technofidgets/presentation/09.jpg" alt="Image" class="img-fluid" style="width: 32%">
@@ -139,12 +139,12 @@
 
 						<p>At the same time, I explored the exisiting design space of fidget tools and bimanual interaction. This involved exploring existing and potential interactions, as well as the nature of physical forms.</p>
 
-						<div class="mb-4 text-center" data-aos="fade-up">            
+						<div class="mb-4 text-center" data-aos="fade-up">
 							<img src="images/technofidgets/01.jpg" alt="Image" class="img-fluid" style="width: 60%">
 							<p>Annotating handheld prototypes to evaluates shape and tactile control.</p>
 						</div>
 
-						<div class="mb-4 text-center" data-aos="fade-up">            
+						<div class="mb-4 text-center" data-aos="fade-up">
 							<img src="images/technofidgets/13.jpg" alt="Image" class="img-fluid" style="width: 49%">
 							<img src="images/technofidgets/09.jpg" alt="Image" class="img-fluid" style="width: 49%">
 							<p>Catalogued creative software commands, and fidget properties; sketches communicating fidget and bimanual interactions.</p>
@@ -196,7 +196,7 @@
 				</div>
 
 				<hr>
-				
+
 			</div>
 		</div>
 
@@ -204,10 +204,10 @@
 		<div class="site-section bg-white block-13">
 			<div class="container" data-aos="fade-up">
 				<div class="nonloop-block-13 owl-carousel">
-					
+
 
 					<div class="text-center p-3 p-md-5 bg-light">
-						<div class="mb-4">            
+						<div class="mb-4">
 							<img src="images/technofidgets/06.jpg" alt="Image" class="img-fluid">
 						</div>
 						<div class="">
@@ -216,7 +216,7 @@
 					</div>
 
 					<div class="text-center p-3 p-md-5 bg-light">
-						<div class="mb-4">            
+						<div class="mb-4">
 							<img src="images/technofidgets/07.jpg" alt="Image" class="img-fluid">
 						</div>
 						<div class="">
@@ -225,7 +225,7 @@
 					</div>
 
 					<div class="text-center p-3 p-md-5 bg-light">
-						<div class="mb-4">            
+						<div class="mb-4">
 							<img src="images/technofidgets/02.jpg" alt="Image" class="img-fluid">
 						</div>
 						<div class="">
@@ -254,13 +254,8 @@
 
 				<div class="row pt-5 mt-5 text-center">
 					<div class="col-md-12">
-						<p>Get in Touch.</p>
-						<p>+31 6 16 82 91 49‬ • <a href="mailto:zacharylwilson@me.com">zacharylwilson@me.com</a> • <a href="https://www.linkedin.com/in/zack-wilson/">LinkedIn</a> • <a href="https://github.com/zlwilson">GitHub</a></p>
-
 						<p>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | Powered by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+							&copy; </script><script>document.write(new Date().getFullYear());</script>
 						</p>
 					</div>
 
